refactor: Stream, instanceof 간단화 (java:S6204, S6201)